<resources>
  <string name="close_message">Press back once more to close Better Barista.</string>
  <string name="app_name">Better Barista</string>
  <string name="title_drinks">Drinks</string>
  <string name="title_timer">Timer</string>
  <string name="title_more">More</string>
  <string name="drink_image">Drink Image</string>
  <string name="single_drink_image">Single Drink Toolbar Image</string>
  <string name="instructions">Instructions</string>
  <string name="timer_error">Could not get timer duration for this drink.</string>
  <string name="final_time_for_timer">00:00</string>
  <string name="feedback">Help improve the app by sending feedback! \n Just click me to send an email.</string>
  <string name="image_source">Images provided by Unsplash</string>
  <string name="mailto" translatable="false">mailto:coffeeandcreamstudios@gmail.com</string>
  <string name="emailSubject" translatable="false">Better Barista feedback</string>
  <string name="duration">Duration</string>
  <string name="strength">Strength</string>
  <string name="temperature">Temp.</string>
  <string name="difficulty">Difficulty</string>
  <string name="start">Start</string>
  <string name="pause">Pause</string>
  <string name="reset">Reset</string>
  <string name="easy">Easy</string>
  <string name="easy_intermediate">Easy - Intermediate</string>
  <string name="intermediate">Intermediate</string>
  <string name="intermediate_difficult">Intermediate - Difficult</string>
  <string name="difficult">Difficult</string>
  <string name="weak">Weak</string>
  <string name="weak_regular">Weak - Regular</string>
  <string name="regular">Regular</string>
  <string name="regular_strong">Regular - Strong</string>
  <string name="strong">Strong</string>
  <string name="strong_potent">Strong - Potent</string>
  <string name="potent">Potent</string>
  <string name="hot">Hot</string>
  <string name="cold">Cold</string>
  <string name="hot_or_cold">Hot/Cold</string>
  <string name="coffee">Coffee</string>
  <string name="coffee_description">The classic cup of coffee, easy to make and even easier to enjoy.</string>
  <string name="pour_over">Pour Over</string>
  <string name="pour_over_description">A brewing method not to be looked down upon, the pour over is an skill that every great barista should master.</string>
  <string name="mocha">Mocha</string>
  <string name="mocha_description">A blend of espresso and chocolate make this drink an all year favorite for some.</string>
  <string name="french_press">French Press</string>
  <string name="french_press_description">When you just want a tasty cup of coffee without all the hassle a French Press might just be your best bet. Ease of use and a great cup of coffee each and every time. </string>
  <string name="aeropress">Aeropress</string>
  <string name="aeropress_description">An incredible brewing method that can make amazing coffee every time. The true strength to the Aeropress is it\'s versatility. Use it to make a regular cup of coffee or a shot of espresso.</string>
  <string name="cold_brew">Cold Brew</string>
  <string name="cold_brew_description">When the heat starts to bear down on you, look to this drink for the best way to cool off.</string>
  <string name="kalita_wave">Kalita Wave</string>
  <string name="kalita_wave_description">Similar to his brother, the pour over, the Kalita Wave is an amazing choice for creating coffee. Simple, elegant, and tasteful, every cup you make can be masterpiece. A bonus perk with the Kalita Wave resides in the fact that it isn\'t made of porcelain, so it is great for the hiker\'s and camper\'s!</string>
  <string name="espresso">Espresso</string>
  <string name="espresso_description">The concentrated base of coffee that is used for nearly every other form of coffee other than a drip or pour over, this is truly a skill that every barista has to master.</string>
  <string name="chai_latte">Chai Latte</string>
  <string name="chai_latte_description">Creamy, sweet, and spicy? A Chai Latte can be all of these or none, but that\'s the beauty of it really. Simply a blend of milk and Chai Tea this drink can be made to suit exactly what you want.</string>
  <string name="dirty_chai">Dirty Chai</string>
  <string name="dirty_chai_description">Remember that Chai Latte from yesterday? Why don\'t you throw in a shot of espresso and see how much better the world is this way.</string>
  <string name="americano">Americano</string>
  <string name="americano_description">Want something a little different from a regular cup of coffee, but the same strength? Look no further! The Americano was first created in WWII when American soldier\'s were stationed oversea\'s and had very little to drink other than espresso, so working with what they had they added some hot water to the espresso and the Americano was born!</string>
  <string name="cappuccino">Cappuccino</string>
  <string name="cappuccino_description">A classic Italian coffee beverage generally served with two shots of espresso and steamed milk foam, the only thing stopping you from drinking this right now is time.</string>
  <string name="black_eye">Black Eye</string>
  <string name="black_eye_description">Love your cup of coffee every morning but need an extra little kick sometimes? This drink can do just that. A shot of espresso topped off with however much coffee you want and you\'re ready to start your day.</string>
  <string name="red_eye">Red Eye</string>
  <string name="red_eye_description">Black Eye too weak for you? Yeah, me too. This is my favorite way to start the day. Two shots of espresso and some amazing coffee on top and my computer can\'t take how fast my finger\'s move.</string>
  <string name="green_eye">Green Eye</string>
  <string name="green_eye_description">When finals are right around the corner possibly the best thing to keep you awake is a Green Eye. Three shots of espresso and coffee on top of that? This thing will keep you going all night long.</string>
  <string name="about">About</string>
  <string name="forward_arrow">Forward Arrow</string>
  <string name="about_paragraph">This app was made for the coffee lover in mind, because I love coffee myself. I wanted other\'s to be able to make the best coffee at home without having to spend an exorbitant amount of money at coffee shops, when all it takes is a little time, patience, and willingness to learn. \n \nThanks for allowing this app to help you become a better barista!</string>
</resources>