<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Coffee and Cream Studios
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimaryDark">

  <TextView
    android:id="@+id/feedback"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_marginBottom="8dp"
    android:fontFamily="@font/raleway_bold"
    android:gravity="center"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:text="@string/feedback"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <LinearLayout
    android:id="@+id/about_navigation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="horizontal"
    android:padding="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginStart="8dp"
      android:text="@string/about"
      android:textColor="@color/textColorPrimary"
      android:textSize="16sp" />

    <View
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="1" />

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/forward_arrow"
      app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />

  </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>